Puppet editor dialog is now fixed height - puppet editor tool options overlap with canvas when expanded

--- a/src/components/puppet-editor/control-point-editor/control-point-editor.scss
+++ b/src/components/puppet-editor/control-point-editor/control-point-editor.scss
@@ -47,12 +47,6 @@
 	flex-grow: 1;
 }
 
-.control-point-editor-dialog-body {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
 .control-point-editor-dialog-bottom-bar {
 	box-shadow:
 		0px -1px 1px rgba(0, 0, 0, 0.08),
